chore: update homepage

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         .subtitle {
           font-size: 1.18em;
           color: #b0cfff;
-          margin-bottom: 0.5em;
+          margin-bottom: 2em;
         }
         .note {
           background: var(--panel);
@@ -209,14 +209,16 @@
         Real-time Elite Dangerous journal data on your X52 Pro MFD.<br />
         Instantly see system, planet, and cargo info as you play.
       </div>
-      <div class="note">
-        <b>Note:</b> Only works with the X52 Pro (not the regular X52 HOTAS).
-      </div>
-      <div class="note">
-        <b>Note:</b> EDxDC is currently in beta. Please report bugs on
-        <a href="https://github.com/pellux-network/EDxDC/issues" target="_blank"
-          >GitHub Issues</a
-        >.
+      <div style="display: flex; justify-content: center; gap: 1.2em; flex-wrap: wrap; margin-bottom: 1.5em;">
+        <div class="note" style="margin: 0;">
+          <b>Note:</b> Only works with the X52 Pro (not the regular X52 HOTAS).
+        </div>
+        <div class="note" style="margin: 0;">
+          <b>Note:</b> EDxDC is currently in beta. Please report bugs on
+          <a href="https://github.com/pellux-network/EDxDC/issues" target="_blank"
+        >GitHub Issues</a
+          >.
+        </div>
       </div>
     </header>
     <div class="image-section">
@@ -231,7 +233,7 @@
       .image-section {
       display: flex;
       justify-content: center;
-      margin: 2.5em 0 1.5em 0;
+      margin: 2.5em 0 0 0;
       }
       .feature-image {
       max-width: 98%;
