--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <!-- Open Graph metadata -->
     <meta property="og:title" content="EDxDC" />
     <meta property="og:description" content="Real-time Elite Dangerous journal data on your X52 Pro MFD. Instantly see system, planet, and cargo info as you play." />
-    <meta property="og:image" content="./icon.ico" />
+    <meta property="og:image" content="./assets/giticon.png" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://pellux-network.github.io" />
   </head>
