chore: update home page

--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
     <!-- Open Graph metadata -->
     <meta property="og:title" content="EDxDC" />
     <meta property="og:description" content="Real-time Elite Dangerous journal data on your X52 Pro MFD. Instantly see system, planet, and cargo info as you play." />
-    <meta property="og:image" content="./assets/giticon.png" />
+    <meta property="og:image" content="./assets/ogheader.png" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://pellux-network.github.io" />
+    <meta property="og:site_theme" content="#09cc58" />
   </head>
   <body>
     <header class="main-header">
