chore: update og paths

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
       property="og:description"
       content="Real-time Elite Dangerous journal data on your X52 Pro MFD. Instantly see system, planet, and cargo info as you play."
     />
-    <meta property="og:image" content="assets/ogheader.png" />
-    <meta property="og:logo" content="assets/giticon.png" />
+    <meta property="og:image" content="/assets/ogheader.png" />
+    <meta property="og:logo" content="/assets/giticon.png" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://edxdc.pellux.net" />
     <meta property="og:site_theme" content="#09cc58" />
@@ -25,12 +25,12 @@
     />
     <meta
       name="twitter:image"
-      content="assets/ogheader.png"
+      content="/assets/ogheader.png"
     />
   </head>
   <body>
     <header class="main-header">
-      <img src="assets/giticon.png" alt="EDxDC Logo" class="logo-img" />
+      <img src="/assets/giticon.png" alt="EDxDC Logo" class="logo-img" />
       <div class="main-title">EDxDC</div>
       <div class="subtitle">
         Real-time Elite Dangerous journal data on your X52 Pro MFD.<br />
@@ -61,7 +61,7 @@
     <div class="image-section">
       <figure>
         <img
-          src="assets/diagrams/nextjumpexample.png"
+          src="/assets/diagrams/nextjumpexample.png"
           alt="Next Jump Example"
           class="feature-image"
         />
