chore: update og tags

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <meta property="og:logo" content="/assets/giticon.png" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://edxdc.pellux.net" />
-    <meta property="og:site_theme" content="#09cc58" />
+    <meta name="theme-color" content="#09cc58">
     <!-- Twitter Meta Tags -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta property="twitter:url" content="https://edxdc.pellux.net" />
