chore: update home page

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <meta property="og:logo" content="/assets/giticon.png" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://edxdc.pellux.net" />
-    <meta name="theme-color" content="#09cc58">
+    <meta name="theme-color" content="#09cc58" />
     <!-- Twitter Meta Tags -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta property="twitter:url" content="https://edxdc.pellux.net" />
@@ -23,13 +23,33 @@
       name="twitter:description"
       content="Real-time Elite Dangerous journal data on your X52 Pro MFD. Instantly see system, planet, and cargo info as you play."
     />
-    <meta
-      name="twitter:image"
-      content="/assets/ogheader.png"
-    />
+    <meta name="twitter:image" content="/assets/ogheader.png" />
   </head>
   <body>
     <header class="main-header">
+      <a
+        class="github-corner"
+        href="https://github.com/pellux-network/EDxDC"
+        target="_blank"
+        title="View on GitHub"
+        aria-label="GitHub"
+        style="position: absolute; top: 18px; right: 24px; z-index: 10"
+      >
+        <img
+          src="/assets/github.svg"
+          alt="GitHub"
+          style="
+            width: 32px;
+            height: 32px;
+            opacity: 0.33;
+            transition: opacity 0.20s, transform 0.20s;
+            border-radius: 50%;
+            filter: invert(1) brightness(2);
+          "
+          onmouseover="this.style.opacity='1';this.style.transform='scale(1.08) rotate(-8deg)'"
+          onmouseout="this.style.opacity='0.33';this.style.transform='none'"
+        />
+      </a>
       <img src="/assets/giticon.png" alt="EDxDC Logo" class="logo-img" />
       <div class="main-title">EDxDC</div>
       <div class="subtitle">
@@ -134,12 +154,34 @@
         </div>
       </section>
       <section class="docs-section">
-        <h2 class="docs-header" style="margin-bottom: 0.7em"><a href="https://github.com/pellux-network/EDxDC/wiki">Wiki</a></h2>
+        <h2 class="docs-header" style="margin-bottom: 0.7em">
+          <a href="https://github.com/pellux-network/EDxDC/wiki">Wiki</a>
+        </h2>
         <ul class="docs-list">
-          <li><a href="https://github.com/pellux-network/EDxDC/wiki/1.-Getting-Started">Getting Started</a></li>
-          <li><a href="https://github.com/pellux-network/EDxDC/wiki/2.-Features-and-Output">Features &amp; Output</a></li>
-          <li><a href="https://github.com/pellux-network/EDxDC/wiki/3.-Configuration">Configuration</a></li>
-          <li><a href="https://github.com/pellux-network/EDxDC/wiki/4.-Troubleshooting">Troubleshooting</a></li>
+          <li>
+            <a
+              href="https://github.com/pellux-network/EDxDC/wiki/1.-Getting-Started"
+              >Getting Started</a
+            >
+          </li>
+          <li>
+            <a
+              href="https://github.com/pellux-network/EDxDC/wiki/2.-Features-and-Output"
+              >Features &amp; Output</a
+            >
+          </li>
+          <li>
+            <a
+              href="https://github.com/pellux-network/EDxDC/wiki/3.-Configuration"
+              >Configuration</a
+            >
+          </li>
+          <li>
+            <a
+              href="https://github.com/pellux-network/EDxDC/wiki/4.-Troubleshooting"
+              >Troubleshooting</a
+            >
+          </li>
           <li>
             <a
               href="https://github.com/pellux-network/EDxDC/wiki/5.-Drivers"
@@ -151,7 +193,11 @@
               >Drivers</a
             >
           </li>
-          <li><a href="https://github.com/pellux-network/EDxDC/wiki/6.-Credits">Credits</a></li>
+          <li>
+            <a href="https://github.com/pellux-network/EDxDC/wiki/6.-Credits"
+              >Credits</a
+            >
+          </li>
         </ul>
       </section>
     </main>
