--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
             <code>%APPDATA%\EDxDC\main.conf</code>
           </li>
         </ol>
-        <div class="note" style="margin-top: 1em">
+        <div class="note">
           <b>Note</b>: For detailed setup, see the
           <a href="./1.-Getting-Started">Getting Started</a> guide.
         </div>
@@ -280,7 +280,7 @@
         color: var(--accent2);
         border-left: 5px solid var(--accent2);
         padding: 0.85em 1.2em;
-        margin: 2em auto 2.5em auto;
+        margin: 2em auto 2em auto;
         font-size: 1.08em;
         max-width: 480px;
         border-radius: var(--radius);
