fix: fix broken link

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
         </ol>
         <div class="note">
           <b>Note</b>: For detailed setup, see the
-          <a href="./1.-Getting-Started">Getting Started</a> guide.
+          <a href="https://github.com/pellux-network/EDxDC/wiki/1.-Getting-Started">Getting Started</a> guide.
         </div>
       </section>
       <section class="docs-section">
@@ -504,4 +504,5 @@
       btn.onclick = () => window.scrollTo({ top: 0, behavior: "smooth" });
     </script>
   </body>
+
 </html>
